--- a/app/templates/components/layouts/app-sidebar.html
+++ b/app/templates/components/layouts/app-sidebar.html
@@ -37,13 +37,13 @@
 				<li class="slide">
 					<a class="side-menu__item" data-bs-toggle="slide" href="{% url 'projects' %}">
 						<img src="{% static 'assets/images/icons/plant.png' %}" class="side-menu__icon" enable-background="new 0 0 24 24" viewBox="0 0 24 24" {% comment %} style="margin-right: 10px; width: 10%;filter: contrast(20%);" {% endcomment %}/>
-						<span class="side-menu__label"> Projets</span><i class="angle fa fa-angle-right"></i>
+						<span class="side-menu__label">Traçage Projets</span><i class="angle fa fa-angle-right"></i>
 					</a>
 				</li>
 				<li class="slide">
 					<a class="side-menu__item" data-bs-toggle="slide" href="{% url 'parcelles' %}">
 						<img src="{% static 'assets/images/icons/polygon.png' %}" class="side-menu__icon" enable-background="new 0 0 24 24" viewBox="0 0 24 24" {% comment %} style="margin-right: 10px; width: 10%;filter: contrast(20%);" {% endcomment %}/>
-						<span class="side-menu__label">Parcelles</span><i class="angle fa fa-angle-right"></i>
+						<span class="side-menu__label">Satellite</span><i class="angle fa fa-angle-right"></i>
 					</a>
 				</li>
 				{% comment %} <li class="slide">
@@ -94,13 +94,13 @@
 				<li class="slide">
 					<a class="side-menu__item" data-bs-toggle="slide" href="{% url 'projects' %}">
 						<img src="{% static 'assets/images/icons/plant.png' %}" class="side-menu__icon" enable-background="new 0 0 24 24" viewBox="0 0 24 24" {% comment %} style="margin-right: 10px; width: 10%;filter: contrast(20%);" {% endcomment %}/>
-						<span class="side-menu__label"> Projets</span><i class="angle fa fa-angle-right"></i>
+						<span class="side-menu__label">Traçage Projets</span><i class="angle fa fa-angle-right"></i>
 					</a>
 				</li>
 				<li class="slide">
 					<a class="side-menu__item" data-bs-toggle="slide" href="{% url 'parcelles' %}">
 						<img src="{% static 'assets/images/icons/polygon.png' %}" class="side-menu__icon" enable-background="new 0 0 24 24" viewBox="0 0 24 24" {% comment %} style="margin-right: 10px; width: 10%;filter: contrast(20%);" {% endcomment %}/>
-						<span class="side-menu__label">Parcelles</span><i class="angle fa fa-angle-right"></i>
+						<span class="side-menu__label">Satellite</span><i class="angle fa fa-angle-right"></i>
 					</a>
 				</li>
 				<li class="slide">
@@ -173,13 +173,13 @@
 				<li class="slide">
 					<a class="side-menu__item" data-bs-toggle="slide" href="{% url 'projects' %}">
 						<img src="{% static 'assets/images/icons/plant.png' %}" class="side-menu__icon" enable-background="new 0 0 24 24" viewBox="0 0 24 24" {% comment %} style="margin-right: 10px; width: 10%;filter: contrast(20%);" {% endcomment %}/>
-						<span class="side-menu__label"> Projets</span><i class="angle fa fa-angle-right"></i>
+						<span class="side-menu__label"> Traçage Projets</span><i class="angle fa fa-angle-right"></i>
 					</a>
 				</li>
 				<li class="slide">
 					<a class="side-menu__item" data-bs-toggle="slide" href="{% url 'parcelles' %}">
 						<img src="{% static 'assets/images/icons/polygon.png' %}" class="side-menu__icon" enable-background="new 0 0 24 24" viewBox="0 0 24 24" {% comment %} style="margin-right: 10px; width: 10%;filter: contrast(20%);" {% endcomment %}/>
-						<span class="side-menu__label">Parcelles</span><i class="angle fa fa-angle-right"></i>
+						<span class="side-menu__label">Satellite</span><i class="angle fa fa-angle-right"></i>
 					</a>
 				</li>
 				<li class="slide">
@@ -271,13 +271,13 @@
 				<li class="slide">
 					<a class="side-menu__item" data-bs-toggle="slide" href="{% url 'projects' %}">
 						<img src="{% static 'assets/images/icons/plant.png' %}" class="side-menu__icon" enable-background="new 0 0 24 24" viewBox="0 0 24 24" {% comment %} style="margin-right: 10px; width: 10%;filter: contrast(20%);" {% endcomment %}/>
-						<span class="side-menu__label"> Projets</span><i class="angle fa fa-angle-right"></i>
+						<span class="side-menu__label"> Traçage Projets</span><i class="angle fa fa-angle-right"></i>
 					</a>
 				</li>
 				<li class="slide">
 					<a class="side-menu__item" data-bs-toggle="slide" href="{% url 'parcelles' %}">
 						<img src="{% static 'assets/images/icons/polygon.png' %}" class="side-menu__icon" enable-background="new 0 0 24 24" viewBox="0 0 24 24" {% comment %} style="margin-right: 10px; width: 10%;filter: contrast(20%);" {% endcomment %}/>
-						<span class="side-menu__label">Parcelles</span><i class="angle fa fa-angle-right"></i>
+						<span class="side-menu__label">Satellite</span><i class="angle fa fa-angle-right"></i>
 					</a>
 				</li>
 				<li class="slide">
@@ -393,13 +393,13 @@
 				<li class="slide">
 					<a class="side-menu__item" data-bs-toggle="slide" href="{% url 'projects' %}">
 						<img src="{% static 'assets/images/icons/plant.png' %}" class="side-menu__icon" enable-background="new 0 0 24 24" viewBox="0 0 24 24" {% comment %} style="margin-right: 10px; width: 10%;filter: contrast(20%);" {% endcomment %}/>
-						<span class="side-menu__label"> Projets</span>{% comment %} <i class="angle fa fa-angle-right"></i> {% endcomment %}
+						<span class="side-menu__label"> Traçage Projets</span>{% comment %} <i class="angle fa fa-angle-right"></i> {% endcomment %}
 					</a>
 				</li>
 				<li class="slide">
 					<a class="side-menu__item" data-bs-toggle="slide" href="{% url 'parcelles' %}">
 						<img src="{% static 'assets/images/icons/polygon.png' %}" class="side-menu__icon" enable-background="new 0 0 24 24" viewBox="0 0 24 24" {% comment %} style="margin-right: 10px; width: 10%;filter: contrast(20%);" {% endcomment %}/>
-						<span class="side-menu__label">Parcelles</span>{% comment %} <i class="angle fa fa-angle-right"></i> {% endcomment %}
+						<span class="side-menu__label">Satellite</span>{% comment %} <i class="angle fa fa-angle-right"></i> {% endcomment %}
 					</a>
 				</li>
 				<li class="slide">
