--- a/app/templates/components/layouts/app-sidebar.html
+++ b/app/templates/components/layouts/app-sidebar.html
@@ -78,7 +78,7 @@
 						</ul>
 						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Détection Manuelle</a></li>
 						<ul class="slide-menu">
-							<li><a href="form-wizard" class="slide-item">Analyse </a></li>
+							<li><a href="analyse" class="slide-item">Analyse </a></li>
 							<li><a class="slide-item" href="product-details">Résultats</a></li>
 						</ul>
 						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Mapping des Anomalies</a></li>
@@ -135,7 +135,7 @@
 						</ul>
 						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Détection Manuelle</a></li>
 						<ul class="slide-menu">
-							<li><a href="form-wizard" class="slide-item">Analyse </a></li>
+							<li><a href="analyse" class="slide-item">Analyse </a></li>
 							<li><a class="slide-item" href="product-details">Résultats</a></li>
 						</ul>
 						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Mapping des Anomalies</a></li>
@@ -214,7 +214,7 @@
 						</ul>
 						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Détection Manuelle</a></li>
 						<ul class="slide-menu">
-							<li><a href="form-wizard" class="slide-item">Analyse </a></li>
+							<li><a href="analyse" class="slide-item">Analyse </a></li>
 							<li><a class="slide-item" href="product-details">Résultats</a></li>
 						</ul>
 						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Mapping des Anomalies</a></li>
@@ -312,7 +312,7 @@
 						</ul>
 						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Détection Manuelle</a></li>
 						<ul class="slide-menu">
-							<li><a href="form-wizard" class="slide-item">Analyse </a></li>
+							<li><a href="analyse" class="slide-item">Analyse </a></li>
 							<li><a class="slide-item" href="product-details">Résultats</a></li>
 						</ul>
 						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Mapping des Anomalies</a></li>
@@ -434,7 +434,7 @@
 						</ul>
 						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Détection Manuelle</a></li>
 						<ul class="slide-menu">
-							<li><a href="form-wizard" class="slide-item">Analyse </a></li>
+							<li><a href="analyse" class="slide-item">Analyse </a></li>
 							<li><a class="slide-item" href="product-details">Résultats</a></li>
 						</ul>
 						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Mapping des Anomalies</a></li>
