--- a/app/templates/components/layouts/app-sidebar.html
+++ b/app/templates/components/layouts/app-sidebar.html
@@ -76,11 +76,11 @@
 							<li><a href="form-wizard" class="slide-item">Analyse </a></li>
 							<li><a class="slide-item" href="product-details">Résultats</a></li>
 						</ul>
-						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Détection Manuelle</a></li>
-						<ul class="slide-menu">
+						<li class="sub-side-menu-label1"><a href="analyse">Détection Manuelle</a></li>
+						{% comment %} <ul class="slide-menu">
 							<li><a href="analyse" class="slide-item">Analyse </a></li>
 							<li><a class="slide-item" href="product-details">Résultats</a></li>
-						</ul>
+						</ul> {% endcomment %}
 						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Mapping des Anomalies</a></li>
 					</ul>
 				</li>				
@@ -133,11 +133,11 @@
 							<li><a href="form-wizard" class="slide-item">Analyse </a></li>
 							<li><a class="slide-item" href="product-details">Résultats</a></li>
 						</ul>
-						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Détection Manuelle</a></li>
-						<ul class="slide-menu">
+						<li class="sub-side-menu-label1"><a href="analyse">Détection Manuelle</a></li>
+						{% comment %} <ul class="slide-menu">
 							<li><a href="analyse" class="slide-item">Analyse </a></li>
 							<li><a class="slide-item" href="product-details">Résultats</a></li>
-						</ul>
+						</ul> {% endcomment %}
 						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Mapping des Anomalies</a></li>
 					</ul>
 				</li>
@@ -212,11 +212,11 @@
 							<li><a href="form-wizard" class="slide-item">Analyse </a></li>
 							<li><a class="slide-item" href="product-details">Résultats</a></li>
 						</ul>
-						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Détection Manuelle</a></li>
-						<ul class="slide-menu">
+						<li class="sub-side-menu-label1"><a href="analyse">Détection Manuelle</a></li>
+						{% comment %} <ul class="slide-menu">
 							<li><a href="analyse" class="slide-item">Analyse </a></li>
 							<li><a class="slide-item" href="product-details">Résultats</a></li>
-						</ul>
+						</ul> {% endcomment %}
 						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Mapping des Anomalies</a></li>
 					</ul>
 				</li>
@@ -310,11 +310,11 @@
 							<li><a href="form-wizard" class="slide-item">Analyse </a></li>
 							<li><a class="slide-item" href="product-details">Résultats</a></li>
 						</ul>
-						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Détection Manuelle</a></li>
-						<ul class="slide-menu">
+						<li class="sub-side-menu-label1"><a href="analyse">Détection Manuelle</a></li>
+						{% comment %} <ul class="slide-menu">
 							<li><a href="analyse" class="slide-item">Analyse </a></li>
 							<li><a class="slide-item" href="product-details">Résultats</a></li>
-						</ul>
+						</ul> {% endcomment %}
 						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Mapping des Anomalies</a></li>
 					</ul>
 				</li>
@@ -432,11 +432,11 @@
 							<li><a href="form-wizard" class="slide-item">Analyse </a></li>
 							<li><a class="slide-item" href="product-details">Résultats</a></li>
 						</ul>
-						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Détection Manuelle</a></li>
-						<ul class="slide-menu">
+						<li class="sub-side-menu-label1"><a href="analyse">Détection Manuelle</a></li>
+						{% comment %} <ul class="slide-menu">
 							<li><a href="analyse" class="slide-item">Analyse </a></li>
 							<li><a class="slide-item" href="product-details">Résultats</a></li>
-						</ul>
+						</ul> {% endcomment %}
 						<li class="sub-side-menu-label1"><a href="javascript:void(0)">Mapping des Anomalies</a></li>
 					</ul>
 				</li>
