--- a/app/templates/project-new-form.html
+++ b/app/templates/project-new-form.html
@@ -109,27 +109,27 @@
 														<label for="project-category" class="form-label text-muted">Culture :</label>
 														<select class="form-control select2-show-search" id="project-category-id" placeholder="Choose Type..." name="project_category">
 															<option label="Choose one"></option>
-															<option value="sample">Grand Culture</option>
-															<option value="sample">Arbo-culture</option>
-															<option value="sample">Palmier</option>
-															<option value="sample">Mixte</option>
+															<option value="Grand Culture">Grand Culture</option>
+															<option value="Arbo-culture">Arbo-culture</option>
+															<option value="Palmier">Palmier</option>
+															<option value="Mixte">Mixte</option>
 														</select>
 													</div>
 												</div>
 												<div class="col-sm-12 col-md-12 col-xl-4">
 													<div class="form-group">
 														<label for="project-department" class="form-label text-muted">Type de culture </label>
-														<select class="form-control select2-show-search" id="project-department-id" data-placeholder="Choose Type..." name="department">
+														<select class="form-control select2-show-search" id="project-department-id" data-placeholder="Choose Type..." name="project_department">
 															<option label="Choose one"></option>
-															<option value="sample">Blé</option>
-															<option value="sample">Alpha</option>
-															<option value="sample">Alpha-Alpha</option>
-															<option value="sample">Oliver</option>
-															<option value="sample">Amandier</option>
-															<option value="sample">Pistachier</option>
-															<option value="sample">Degla</option>
-															<option value="sample">Beser</option>
-															<option value="sample">Aligue</option>
+															<option value="Blé">Blé</option>
+															<option value="Alpha">Alpha</option>
+															<option value="Alpha-Alpha">Alpha-Alpha</option>
+															<option value="Oliver">Oliver</option>
+															<option value="Amandier">Amandier</option>
+															<option value="Pistachier">Pistachier</option>
+															<option value="Degla">Degla</option>
+															<option value="Beser">Beser</option>
+															<option value="Aligue">Aligue</option>
 														</select>
 													</div>
 												</div>
@@ -261,5 +261,3 @@
         <script src="{% static 'assets/js/themeColors.js'%}"></script>
 
     {% endblock %}
-
-
