--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -47,19 +47,24 @@
 									<h4 class="m-0" id="typeTitle">All Projects</h4>
 									<input id="projects" value="{{ projects }}" style="display: none;" />
 									<div class="d-sm-flex align-items-center">
-										<div class="btn-list mx-4">																								
+										<div class="btn-list mx-4">
+											<a class="btn btn-outline-primary" href="project-new">Ajouter Projet
+												<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24">
+													<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+													<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+													<g id="SVGRepo_iconCarrier">
+														<path d="M400,168H328V112h32V16H264V48H112V16H16v96H48V264H16v96h96V328h72v72H152v96h96V464H400v32h96V400H464V232h32V136H400ZM296,48h32V80H296Zm32,248v32H296V296ZM48,48H80V80H48ZM80,328H48V296H80Zm32-32V264H80V112h32V80H264v32h32V264H264v32ZM216,464H184V432h32Zm248,0H432V432h32ZM432,168h32v32H432Zm0,232H400v32H248V400H216V328h48v32h96V264H328V200h72v32h32Z" 
+															  stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+													</g>
+												</svg>
+											</a>																								
 											<a class="btn btn-primary" href="#">
 												<svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn text-white" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M21.5,13h-8.0005493C13.2234497,13.0001831,12.9998169,13.223999,13,13.5v8.0005493C13.0001831,21.7765503,13.223999,22.0001831,13.5,22h8.0006104C21.7765503,21.9998169,22.0001831,21.776001,22,21.5v-8.0006104C21.9998169,13.2234497,21.776001,12.9998169,21.5,13z M21,21h-7v-7h7V21z M10.5,2H2.4993896C2.2234497,2.0001831,1.9998169,2.223999,2,2.5v8.0005493C2.0001831,10.7765503,2.223999,11.0001831,2.5,11h8.0006104C10.7765503,10.9998169,11.0001831,10.776001,11,10.5V2.4993896C10.9998169,2.2234497,10.776001,1.9998169,10.5,2z M10,10H3V3h7V10z M10.5,13H2.4993896C2.2234497,13.0001831,1.9998169,13.223999,2,13.5v8.0005493C2.0001831,21.7765503,2.223999,22.0001831,2.5,22h8.0006104C10.7765503,21.9998169,11.0001831,21.776001,11,21.5v-8.0006104C10.9998169,13.2234497,10.776001,12.9998169,10.5,13z M10,21H3v-7h7V21z M21.5,2h-8.0005493C13.2234497,2.0001831,12.9998169,2.223999,13,2.5v8.0005493C13.0001831,10.7765503,13.223999,11.0001831,13.5,11h8.0006104C21.7765503,10.9998169,22.0001831,10.776001,22,10.5V2.4993896C21.9998169,2.2234497,21.776001,1.9998169,21.5,2z M21,10h-7V3h7V10z"/></svg>
 											</a>
 											{% comment %} <a class="btn btn-outline-primary" href="projects-list">
 												<svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M3.5,12C3.223877,12,3,12.223877,3,12.5S3.223877,13,3.5,13S4,12.776123,4,12.5S3.776123,12,3.5,12z M6.5,8h15C21.776123,8,22,7.776123,22,7.5S21.776123,7,21.5,7h-15C6.223877,7,6,7.223877,6,7.5S6.223877,8,6.5,8z M3.5,17C3.223877,17,3,17.223877,3,17.5S3.223877,18,3.5,18S4,17.776123,4,17.5S3.776123,17,3.5,17z M21.5,12h-15C6.223877,12,6,12.223877,6,12.5S6.223877,13,6.5,13h15c0.276123,0,0.5-0.223877,0.5-0.5S21.776123,12,21.5,12z M3.5,7C3.223877,7,3,7.223877,3,7.5S3.223877,8,3.5,8S4,7.776123,4,7.5S3.776123,7,3.5,7z M21.5,17h-15C6.223877,17,6,17.223877,6,17.5S6.223877,18,6.5,18h15c0.276123,0,0.5-0.223877,0.5-0.5S21.776123,17,21.5,17z"/></svg>
 											</a> {% endcomment %}
-											<a class="btn btn-outline-primary" href="project-new">
-												<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-													<path d="M0 0h24v24H0z" fill="none"/>
-													<path d="M12 5v14M5 12h14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-												</svg>
-											</a>
+											
 										</div>
 									</div>
 								</div>
@@ -84,7 +89,7 @@
 																	</div>
 																	<div class="ms-1">
 																		<h6 class="mb-1"> <a href="project-details/{{ project.project.geozone_id }}/" class="float-start">{{ project.project.project_name }}</a></h6>
-																		<span class="text-muted border-end pe-2 fs-11 float-start mt-1">{{ project.project_category }}</span>
+																		<span class="text-muted border-end pe-2 fs-11 float-start mt-1">{{ project.project.project_category }}</span>
 																		<span class="text-teritary ps-1 fs-11">{{ project.project.department }}</span>
 																	</div>
 																</div>
@@ -94,21 +99,27 @@
 																	{% comment %} <div class="stars-main me-3">
 																		<i class="fa fa-star text-light star"></i>
 																	</div> {% endcomment %}
+																	<div class="btn-list mx-4">
+																		<a class="btn btn-outline-primary" href="parcelle-new/{{ project.project.geozone_id }}/">
+																			<svg version="1.1" id="Uploaded to svgrepo.com" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32" xml:space="preserve" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <style type="text/css"> .feather_een{fill:#000000;} </style> <path class="feather_een" d="M4,20c1.105,0,2-0.895,2-2c0-0.45-0.154-0.86-0.404-1.194l5.587-6.984C11.433,9.934,11.708,10,12,10 c0.533,0,1.015-0.212,1.373-0.552l4.728,2.954C18.041,12.592,18,12.79,18,13c0,1.105,0.895,2,2,2s2-0.895,2-2 c0-0.413-0.125-0.797-0.34-1.115l5.433-6.112C27.366,5.913,27.672,6,28,6c1.105,0,2-0.895,2-2c0-1.105-0.895-2-2-2s-2,0.895-2,2 c0,0.413,0.125,0.797,0.34,1.115l-5.433,6.112C20.634,11.087,20.328,11,20,11c-0.533,0-1.015,0.212-1.374,0.552l-4.727-2.955 C13.959,8.407,14,8.209,14,8c0-1.105-0.895-2-2-2s-2,0.895-2,2c0,0.45,0.154,0.86,0.404,1.194l-5.587,6.984 C4.567,16.066,4.292,16,4,16c-1.105,0-2,0.895-2,2C2,19.105,2.895,20,4,20z M28,3c0.551,0,1,0.449,1,1s-0.449,1-1,1s-1-0.449-1-1 S27.449,3,28,3z M20,12c0.551,0,1,0.449,1,1s-0.449,1-1,1s-1-0.449-1-1S19.449,12,20,12z M12,7c0.551,0,1,0.449,1,1s-0.449,1-1,1 s-1-0.449-1-1S11.449,7,12,7z M4,17c0.551,0,1,0.449,1,1s-0.449,1-1,1s-1-0.449-1-1S3.449,17,4,17z M28,21 c-0.677,0-1.273,0.338-1.635,0.853l-4.386-1.645C21.986,20.139,22,20.071,22,20c0-1.105-0.895-2-2-2s-2,0.895-2,2 c0,0.071,0.014,0.139,0.021,0.208l-4.386,1.645C13.273,21.338,12.677,21,12,21c-0.931,0-1.706,0.639-1.929,1.5H5.929 C5.706,21.639,4.931,21,4,21c-1.105,0-2,0.895-2,2c0,1.105,0.895,2,2,2c0.931,0,1.706-0.639,1.929-1.5h4.141 C10.294,24.361,11.069,25,12,25c1.105,0,2-0.895,2-2c0-0.071-0.014-0.139-0.021-0.208l4.386-1.645C18.727,21.662,19.323,22,20,22 s1.273-0.338,1.635-0.853l4.386,1.645C26.014,22.861,26,22.929,26,23c0,1.105,0.895,2,2,2s2-0.895,2-2C30,21.895,29.105,21,28,21z M4,24c-0.551,0-1-0.449-1-1s0.449-1,1-1s1,0.449,1,1S4.551,24,4,24z M12,24c-0.551,0-1-0.449-1-1s0.449-1,1-1s1,0.449,1,1 S12.551,24,12,24z M20,21c-0.551,0-1-0.449-1-1s0.449-1,1-1s1,0.449,1,1S20.551,21,20,21z M28,24c-0.551,0-1-0.449-1-1s0.449-1,1-1 s1,0.449,1,1S28.551,24,28,24z"></path> </g></svg>
+																			
+																			{% comment %} <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="15" height="15">
+																				<path d="M0 0h24v24H0z" fill="none"/>
+																				<path d="M12 5v14M5 12h14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+																			</svg> {% endcomment %}
+																		</a>
+																		<a class="btn btn-outline-primary" href="#">
+																			<svg version="1.1" id="Uploaded to svgrepo.com" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32" xml:space="preserve" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <style type="text/css"> .feather_een{fill:#000000;} </style> <path class="feather_een" d="M4,20c1.105,0,2-0.895,2-2c0-0.45-0.154-0.86-0.404-1.194l5.587-6.984C11.433,9.934,11.708,10,12,10 c0.533,0,1.015-0.212,1.373-0.552l4.728,2.954C18.041,12.592,18,12.79,18,13c0,1.105,0.895,2,2,2s2-0.895,2-2 c0-0.413-0.125-0.797-0.34-1.115l5.433-6.112C27.366,5.913,27.672,6,28,6c1.105,0,2-0.895,2-2c0-1.105-0.895-2-2-2s-2,0.895-2,2 c0,0.413,0.125,0.797,0.34,1.115l-5.433,6.112C20.634,11.087,20.328,11,20,11c-0.533,0-1.015,0.212-1.374,0.552l-4.727-2.955 C13.959,8.407,14,8.209,14,8c0-1.105-0.895-2-2-2s-2,0.895-2,2c0,0.45,0.154,0.86,0.404,1.194l-5.587,6.984 C4.567,16.066,4.292,16,4,16c-1.105,0-2,0.895-2,2C2,19.105,2.895,20,4,20z M28,3c0.551,0,1,0.449,1,1s-0.449,1-1,1s-1-0.449-1-1 S27.449,3,28,3z M20,12c0.551,0,1,0.449,1,1s-0.449,1-1,1s-1-0.449-1-1S19.449,12,20,12z M12,7c0.551,0,1,0.449,1,1s-0.449,1-1,1 s-1-0.449-1-1S11.449,7,12,7z M4,17c0.551,0,1,0.449,1,1s-0.449,1-1,1s-1-0.449-1-1S3.449,17,4,17z M28,21 c-0.677,0-1.273,0.338-1.635,0.853l-4.386-1.645C21.986,20.139,22,20.071,22,20c0-1.105-0.895-2-2-2s-2,0.895-2,2 c0,0.071,0.014,0.139,0.021,0.208l-4.386,1.645C13.273,21.338,12.677,21,12,21c-0.931,0-1.706,0.639-1.929,1.5H5.929 C5.706,21.639,4.931,21,4,21c-1.105,0-2,0.895-2,2c0,1.105,0.895,2,2,2c0.931,0,1.706-0.639,1.929-1.5h4.141 C10.294,24.361,11.069,25,12,25c1.105,0,2-0.895,2-2c0-0.071-0.014-0.139-0.021-0.208l4.386-1.645C18.727,21.662,19.323,22,20,22 s1.273-0.338,1.635-0.853l4.386,1.645C26.014,22.861,26,22.929,26,23c0,1.105,0.895,2,2,2s2-0.895,2-2C30,21.895,29.105,21,28,21z M4,24c-0.551,0-1-0.449-1-1s0.449-1,1-1s1,0.449,1,1S4.551,24,4,24z M12,24c-0.551,0-1-0.449-1-1s0.449-1,1-1s1,0.449,1,1 S12.551,24,12,24z M20,21c-0.551,0-1-0.449-1-1s0.449-1,1-1s1,0.449,1,1S20.551,21,20,21z M28,24c-0.551,0-1-0.449-1-1s0.449-1,1-1 s1,0.449,1,1S28.551,24,28,24z"></path> </g></svg>
+																		</a>
+																	</div>
 																	<a href="#" class="option-dots" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fe fe-more-vertical"></i></a>
 																	<div class="dropdown-menu dropdown-menu-start">
 																		<a class="dropdown-item" href="#"><i class="fe fe-edit me-2"></i> Edit</a>
 																		{% comment %} <a class="dropdown-item" href="#"><i class="fe fe-share me-2"></i> Share</a>
-																		<a class="dropdown-item" href="#"><i class="fe fe-download me-2"></i> Clone</a>
-																		<a class="dropdown-item" href="#"><i class="fe fe-trash me-2"></i> Delete</a> {% endcomment %}
+																		<a class="dropdown-item" href="#"><i class="fe fe-download me-2"></i> Clone</a> {% endcomment %}
+																		<a class="dropdown-item" href="#"><i class="fe fe-trash me-2"></i> Delete</a>
 																	</div>
-																	<div class="btn-list mx-4">
-																		<a class="btn btn-outline-primary" href="parcelle-new/{{ project.project.geozone_id }}/">
-																			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="15" height="15">
-																				<path d="M0 0h24v24H0z" fill="none"/>
-																				<path d="M12 5v14M5 12h14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-																			</svg>
-																		</a>
-																	</div>
+																	
 																</div>
 															</div>
 														</div>
