--- a/app/templates/analyse.html
+++ b/app/templates/analyse.html
@@ -711,25 +711,34 @@
 		{% block modal %}
 
 		<!-- modal -->
-		<div class="modal fade" id="Vertically">
-			<div class="modal-dialog modal-dialog-centered" role="document">
-				<div class="modal-content modal-content-demo">
-					<div class="modal-header">
-						<h6 class="modal-title">Add file</h6><button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"><span aria-hidden="true">&times;</span></button>
-					</div>
-					<div class="modal-body">
-						<div class="mb-2">
-							<input type="file" class="dropify" data-height="200" />
-						</div>
-					</div>
-					<div class="modal-footer">
-						<button class="btn ripple btn-primary" type="button">Add</button>
-						<button class="btn ripple btn-secondary" data-bs-dismiss="modal" type="button">Cancel</button>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- End modal -->
+<div class="modal fade" id="Vertically" tabindex="-1" aria-labelledby="VerticallyLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content modal-content-demo">
+            <div class="modal-header">
+                <h6 class="modal-title" id="VerticallyLabel">Add file</h6>
+                <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- Formulaire d'upload d'image -->
+                <form id="uploadForm" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <!-- Assurez-vous d'inclure la classe dropify pour obtenir le même style -->
+                    <div class="mb-2">
+                        <input type="file" name="image" class="dropify" data-height="200" />
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button class="btn ripple btn-primary" type="submit" form="uploadForm">Add</button>
+                <button class="btn ripple btn-secondary" data-bs-dismiss="modal" type="button">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End modal -->
+
 
         {% endblock %}
 
