--- a/app/templates/analyse-details.html
+++ b/app/templates/analyse-details.html
@@ -31,7 +31,7 @@
 										<div class="row mb-5">
 											<div class=" col-xl-6 col-lg-12 col-md-12">
 												<div class="row h-100">
-													{% comment %} <div class="col-xl-2">
+													<div class="col-xl-2">
 														<div class="clearfix carousel-slider h-100">
 															<div class="carousel slide h-100" data-bs-interval="t" id="thumbcarousel">
 																<div class="carousel-inner h-100">
@@ -45,7 +45,7 @@
 																</div>
 															</div>
 														</div>
-													</div> {% endcomment %}
+													</div>
 													<div class="col-xl-10">
 														<div class="product-carousel h-100">
 															<div class="carousel slide h-100" data-bs-ride="false" id="Slider">
@@ -67,7 +67,7 @@
 																	</div>
 																</div>
 															</div>
-														</div>
+														</div> 
 													</div>
 												</div>
 											</div>
