--- a/app/templates/analyse-details.html
+++ b/app/templates/analyse-details.html
@@ -37,7 +37,21 @@
 											<div class="col-xl-6 col-lg-12 col-md-12">
 
 													<h3 class="mb-2 mt-xl-0 mt-4">Disease Name : {{ result_image.disease_name }}</h3>
-													<div class="text-warning rating-container d-sm-flex">
+
+													<h4 class="mb-3 mt-2"> <svg class="w-inner-icn" enable-background="new 0 0 24 24"  fill="#000000" viewBox="0 0 96 96" id="Layer_1_1_" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><rect height="2" width="2" x="18" y="84"></rect><rect height="2" width="2" x="6" y="82"></rect><rect height="2" width="2" x="30" y="79"></rect><rect height="2" width="2" x="63" y="79"></rect><rect height="2" width="2" x="78" y="81"></rect><rect height="2" width="2" x="86" y="85"></rect><path d="M94,91l-18.739-1.972l-2.707,1.805c-0.035,0.023-0.07,0.044-0.107,0.062l-2,1l-0.895-1.789l1.944-0.972l1.616-1.077L69,86 h-6.586l-3.707,3.707C58.52,89.895,58.265,90,58,90h-2v-2h1.586l3.073-3.073L57,82h-7v-8.025C67.209,73.445,81,59.338,81,42h0 c-17.338,0-31.445,13.791-31.975,31h-1.051C47.445,55.791,33.338,42,16,42h0c0,17.338,13.791,31.445,31,31.975V82h-8l-3.499,2.799 l2.053,1.369c0.145,0.097,0.262,0.229,0.34,0.385L38.618,88H42v2h-4c-0.379,0-0.725-0.214-0.895-0.553l-0.881-1.763L33.697,86H27 l-5.091,2.182L24.6,90.2l-1.2,1.6l-3.69-2.768L2,91l-0.03,3H94V91z M77.293,44.293l1.414,1.414l-25,25l-1.414-1.414L77.293,44.293z M44.309,70.723l-23-22l1.383-1.445l23,22L44.309,70.723z"></path><path d="M33,11.899V19c0,0.315,0.148,0.611,0.4,0.8l7.6,5.7V48h2V25c0-0.315-0.148-0.611-0.4-0.8L35,18.5v-6.601 c2.282-0.463,4-2.48,4-4.899c0-2.761-2.239-5-5-5s-5,2.239-5,5C29,9.419,30.718,11.436,33,11.899z M34,6c0.552,0,1,0.448,1,1 c0,0.552-0.448,1-1,1s-1-0.448-1-1C33,6.448,33.448,6,34,6z"></path><path d="M56,24.535l5.555-3.703C61.833,20.646,62,20.334,62,20v-8.101c2.282-0.463,4-2.48,4-4.899c0-2.761-2.239-5-5-5s-5,2.239-5,5 c0,2.419,1.718,4.436,4,4.899v7.566l-5.555,3.703C54.167,23.354,54,23.666,54,24v24h2V24.535z M61,6c0.552,0,1,0.448,1,1 c0,0.552-0.448,1-1,1s-1-0.448-1-1C60,6.448,60.448,6,61,6z"></path><path d="M70,24.899V29h-8c-0.552,0-1,0.448-1,1v12h2V31h8c0.552,0,1-0.448,1-1v-5.101c2.282-0.463,4-2.48,4-4.899 c0-2.761-2.239-5-5-5s-5,2.239-5,5C66,22.419,67.718,24.436,70,24.899z M71,19c0.552,0,1,0.448,1,1c0,0.552-0.448,1-1,1 s-1-0.448-1-1C70,19.448,70.448,19,71,19z"></path><path d="M24,23.899V30c0,0.552,0.448,1,1,1h8v10h2V30c0-0.552-0.448-1-1-1h-8v-5.101c2.282-0.463,4-2.48,4-4.899 c0-2.761-2.239-5-5-5s-5,2.239-5,5C20,21.419,21.718,23.436,24,23.899z M25,18c0.552,0,1,0.448,1,1c0,0.552-0.448,1-1,1 s-1-0.448-1-1C24,18.448,24.448,18,25,18z"></path><path d="M47.5,20.899V51h2V20.899c2.282-0.463,4-2.48,4-4.899c0-2.761-2.239-5-5-5s-5,2.239-5,5 C43.5,18.419,45.218,20.436,47.5,20.899z M48.5,15c0.552,0,1,0.448,1,1c0,0.552-0.448,1-1,1s-1-0.448-1-1 C47.5,15.448,47.948,15,48.5,15z"></path></g></svg> Symptômes </h4>
+													{% if anomaly %}
+														<p>{{ anomaly.symptomes }}</p>
+													{% else %}
+														<p>Description not available.</p>
+													{% endif %}
+
+													<h4 class="mb-3 mt-2"> <svg class="w-inner-icn" enable-background="new 0 0 24 24" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <defs> <style>.cls-1{fill:#050505;}.cls-2{fill:#0f0f0f;}</style> </defs> <g data-name="23. Herbal" id="_23._Herbal"> <path class="cls-1" d="M17,7H14a3.93,3.93,0,0,0-2.85,1.21A5,5,0,0,0,7,6H3A1,1,0,0,0,2,7V9a5,5,0,0,0,5,5h7a4,4,0,0,0,4-4V8A1,1,0,0,0,17,7ZM4,9V8H7a3,3,0,0,1,3,3v1H7A3,3,0,0,1,4,9Zm12,1a2,2,0,0,1-2,2H12V11a2,2,0,0,1,2-2h2Z"></path> <path class="cls-2" d="M31,12H28.46L29,9.56A5,5,0,0,0,28.24.15a5,5,0,0,0-4.33.92A5,5,0,0,0,22,5a5.13,5.13,0,0,0,1.24,3.32L22.42,12H1a1,1,0,0,0-1,1v4a1,1,0,0,0,1,1H2v3A11,11,0,0,0,13,32h6A11,11,0,0,0,30,21V18h1a1,1,0,0,0,1-1V13A1,1,0,0,0,31,12ZM24.75,7a3,3,0,0,1,.4-4.33,3,3,0,0,1,2.62-.55,3,3,0,0,1,.43,5.64,1.89,1.89,0,0,0-1.13,1.33L26.42,12h-2l.72-3.24A2,2,0,0,0,24.75,7ZM28,21a9,9,0,0,1-9,9H13a9,9,0,0,1-9-9V18H28Zm2-5H2V14H30Z"></path> <path class="cls-1" d="M18,23H17V22a1,1,0,0,0-2,0v1H14a1,1,0,0,0,0,2h1v1a1,1,0,0,0,2,0V25h1a1,1,0,0,0,0-2Z"></path> <path class="cls-1" d="M7,4A1,1,0,0,1,7,2H7A1,1,0,0,1,7,4Z"></path> <path class="cls-1" d="M15,5a1,1,0,0,1,0-2h0a1,1,0,0,1,0,2Z"></path> <path class="cls-1" d="M11,2a1,1,0,0,1,0-2h0a1,1,0,0,1,0,2Z"></path> </g> </g></svg> Traitement</h4>
+													{% if anomaly %}
+														<p>{{ anomaly.traitement }}</p>
+													{% else %}
+														<p>Traitement not available.</p>
+													{% endif %}
+													{% comment %} <div class="text-warning rating-container d-sm-flex">
 														<div class="text-warning">
 															<span class="text-muted">Rating:</span>
 															<i class="fa fa-star"></i>
@@ -94,7 +108,7 @@
 																<p class="mb-0 mt-2">Easy <br> Return</p>
 															</div>
 														</div>
-													</div>
+													</div> {% endcomment %}
 
 											</div>
 										</div>
@@ -368,14 +382,14 @@
 										<div class="card item-card">
 											<div class="product-grid6 card-body">
 												<div class="product-image6">
-													<a href="analyse-details" class="img-container">
+													<a href="{% url 'analyse-details' result_image.id %}" class="img-container">
 														<img class="img-fluid" src="{{ result_image.result_image.url }}" alt="img">
 														{% comment %} <img class="img-fluid" src="{% static 'assets/images/pngs/6.png' %}" alt="img"> {% endcomment %}
 													</a>
 													<div class="icon-container">
 														<ul class="icons">
 															<li>
-																<a href="analyse-details" data-tip="Quick View">
+																<a href="{% url 'analyse-details' result_image.id %}" data-tip="Quick View">
 																	<svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M12,8c-2.2091675,0-4,1.7908325-4,4s1.7908325,4,4,4c2.208252-0.0021973,3.9978027-1.791748,4-4C16,9.7908325,14.2091675,8,12,8z M12,15c-1.6568604,0-3-1.3431396-3-3s1.3431396-3,3-3c1.6561279,0.0018311,2.9981689,1.3438721,3,3C15,13.6568604,13.6568604,15,12,15z M21.960022,11.8046875C19.9189453,6.9902344,16.1025391,4,12,4s-7.9189453,2.9902344-9.960022,7.8046875c-0.0537109,0.1246948-0.0537109,0.2659302,0,0.390625C4.0810547,17.0097656,7.8974609,20,12,20s7.9190063-2.9902344,9.960022-7.8046875C22.0137329,12.0706177,22.0137329,11.9293823,21.960022,11.8046875z M12,19c-3.6396484,0-7.0556641-2.6767578-8.9550781-7C4.9443359,7.6767578,8.3603516,5,12,5s7.0556641,2.6767578,8.9550781,7C19.0556641,16.3232422,15.6396484,19,12,19z"></path></svg>
 																</a>
 															</li>
